fixed bug #12084: Editor window behind header of ILIAS in Safari
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@46197 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -1898,6 +1898,7 @@ div.ilTinyMenuSection {
 	top: 0;
 	left: 0;
 	text-decoration: blink;
+	z-index: 3;
 }
 
 .ilTinyMenuDropDown span {
